Fixed layout bug when viewing individual assignments

--- a/checkmark/public/stylesheets/submit.css
+++ b/checkmark/public/stylesheets/submit.css
@@ -1,5 +1,5 @@
 
-#main_submit {
+#main_submit .group_submit {
     margin-left: 350px;
 }
 #sidebar {
